Update and rename parent-workflow.yml to parent-workflow.yaml

--- a/parent-workflow.yaml
+++ b/parent-workflow.yaml
@@ -23,5 +23,5 @@ jobs:
       - name: Trigger Child Workflow
         uses: peter-evans/workflow-dispatch@v1
         with:
-          workflow: child-workflow.yml
+          workflow: child-workflow.yaml
           ref: refs/heads/main
