--- a/parent-workflow.yaml
+++ b/parent-workflow.yaml
@@ -5,8 +5,8 @@ pool:
   vmImage: 'ubuntu-latest'  # Use an Ubuntu agent
 
 steps:
-# Step 1: Checkout source code
 - task: Checkout@2
+  displayName: 'Checkout Code'
 
 # Step 2: Create a sample file (this will be the artifact)
 - script: |
